# tailormade-coloring-book

./: .gitignore  README.md
backend/: .dockerignore  .env.example  =8.0.0  Dockerfile  loraconfig.md  main.py  pyproject.toml  railway.json  requirements.txt
backend/app/: config.py  main.py  test.py
backend/app/middleware/: auth.py  rate_limit.py
backend/app/models/: book.py
backend/app/routers/: admin.py  auth.py  books.py  characters.py  library.py  profiles.py  stripe_router.py
backend/app/services/: content_filter.py  firebase.py  image_gen.py  library_cache.py  pdf_builder.py  scene_planner.py  sketch_converter.py  storage.py
backend/tests/: test_stripe.py
frontend/: .env.production  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
phase_2_generator/: .env.example  01_generate_seeds.py  02_spot_check.py  03_batch_generate.py  batch_state.db  config.py  generator.py  main.py  pyproject.toml
phase_2_generator/seeds/: animal_butterfly.txt  animal_cat.txt  animal_dog.txt  animal_elephant.txt  animal_lion.txt  dino_trex.txt  dino_triceratops.txt  farm_cow.txt  farm_horse.txt  farm_tractor.txt  ocean_shark.txt  ocean_turtle.txt  ocean_whale.txt  princess_carriage.txt  princess_castle.txt  princess_dragon.txt  space_alien.txt  space_astronaut.txt  space_rocket.txt  unicorn_flying.txt  unicorn_forest.txt  unicorn_rainbow.txt  vehicle_airplane.txt  vehicle_firetruck.txt  vehicle_train.txt
taxonomy/: animals.json  dinosaurs.json  farm.json  master_index.json  ocean.json  princesses.json  space.json  (+2 more)
(+73 files in other folders)
